# kbox

./: Makefile  NOTES  NOTE_ABOUT_ATE_1_0_48  README  README_kbox.html
app/: AndroidManifest.xml  Makefile.debug  local.properties
app/res/layout/: main.xml  term_activity.xml  window_list_item.xml
app/res/values/: strings.xml
app/res/values-tr/: strings.xml
app_1_0_48_2/: build.xml
app_1_0_48_2/examples/pathbroadcasts/: build.xml
app_1_0_48_2/examples/widget/: build.xml
app_1_0_48_2/jni/: Application.mk
app_1_0_48_2/libraries/emulatorview/: build.xml
app_1_0_48_2/res/values/: defaults.xml  strings.xml
app_1_0_48_2/tests/emulatorview-test/: build.xml  local.properties
contrib_image/etc/: kbox_ports.rc  profile
contrib_image/usr/lib/: libmagic.so.1.0.0  libncurses.so.5.9  libreadline.so.6.2
source/: Makefile
source/andplay/: Makefile.kbox  control  main.c
source/bc-1.06/: Makefile  Makefile.kbox  config.cache  config.h  config.status  control
source/bc-1.06/autom4te.cache/: output.1  requests  traces.0  traces.1
source/bc-1.06/bc/: Makefile  dump  scan.c  scan.l
source/bc-1.06/dc/: Makefile
source/bc-1.06/doc/: Makefile
source/bc-1.06/lib/: Makefile
source/busybox-1.19.2/: Makefile.flags  Makefile.kbox
source/busybox-1.19.2/archival/: dpkg.c
source/busybox-1.19.2/coreutils/: date.c
source/fakechroot-2.16/: Makefile  Makefile.in  Makefile.kbox  aclocal.m4  chroot_shell.sh  config.h  config.status  configure  libtool
source/frotz-2.43d/: Makefile  Makefile.kbox  control  frotz
source/gawk-4.0.1/: Makefile  Makefile.kbox  config.h  config.status  control  dgawk  gawk  gawk_4.0.1_kbox.deb  pgawk
source/hexedit-0.9.7/: AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  Makefile.kbox  NEWS  README  acconfig.h  config.cache  config.h  config.in  config.status  configure  configure.in  control
source/hexedit-0.9.7/docs/: Makefile  Makefile.am  Makefile.in  hexedit.1  hexedit.info  hexedit.texinfo
source/hexedit-0.9.7/gnu/: Makefile  Makefile.am  Makefile.in  getopt.c
source/hexedit-0.9.7/src/: Makefile  Makefile.am  Makefile.in  asciikey.c  calc.c  calckeys.c  edit.c  file.c  filebuf.c  filekeys.c  hash.c  help.c  hexedit.h  hexkeys.c  init.c  main.c  misc.c  print.c  search.c  undo.c  widgets.c  windows.c
source/kbox_shell/: Makefile.kbox  initscript  kbox_shell.c
source/ncurses-5.9/: config.status  edit_man.sh
source/readline-6.2/: Makefile  complete.c  config.status
source/rsync-3.0.8/: Makefile.kbox  authenticate.c  control  rsync_daemon.sh
source/solunar-0.1.0/: Makefile.kbox  Makefile.linux_x86  README_solunar.html  TODO  astro.c  astro.h  astrodays.c  astrodays.h  city.c  city.h  cityinfo.h  control  datetime.c  datetime.h  dependencies.mak  error.c  error.h  latlong.c  latlong.h  main.c  mathutil.c  mathutil.h  moontimes.c  moontimes.h  nameddays.c  nameddays.h  parse_zoneinfo.pl  pointerlist.c  pointerlist.h  roundutil.c  roundutil.h  solunar.man.html  solunar_0.1.0_kbox.deb  suntimes.c  suntimes.h  timeutil.c  timeutil.h  trigutil.c  trigutil.h
source/vim/: Makefile.kbox  control
(+304 files in other folders)
