bin_PROGRAMS = hexedit

hexedit_SOURCES = asciikey.c \
                calc.c \
                calckeys.c \
                edit.c \
                file.c \
		filebuf.c \
                filekeys.c \
		hash.c \
                help.c \
                hexkeys.c \
                init.c \
                main.c \
                misc.c \
                print.c \
                search.c \
                undo.c \
                widgets.c \
                windows.c \
                hexedit.h

